# itc9-tests

./: README.md
WIFI-BLE/: .gitignore  CMakeLists.txt  sdkconfig.defaults
WIFI-BLE/components/ble_manager/: CMakeLists.txt  ble_manager.c
WIFI-BLE/components/ble_manager/include/: ble_manager.h
WIFI-BLE/components/wifi_manager/: CMakeLists.txt  wifi_manager.c
WIFI-BLE/components/wifi_manager/include/: wifi_manager.h
WIFI-BLE/main/: CMakeLists.txt  main.c
display/: .gitignore  CMakeLists.txt  partitions_cli.csv  sdkconfig.defaults
display/components/WiFi/: CMakeLists.txt  Kconfig.projbuild  WiFi.c  sntp_syncer.c
display/components/WiFi/include/: WiFi.h  sntp_syncer.h
display/components/alarm_mgr/: CMakeLists.txt  alarm_mgr.c
display/components/alarm_mgr/include/: alarm_mgr.h
display/components/app_audio/: CMakeLists.txt  app_audio.c
display/components/app_audio/include/: app_audio.h
display/components/app_event_handler/: CMakeLists.txt  app_event_handler.c
display/components/app_event_handler/include/: app_event_handler.h
display/components/app_menu/: app_menu.c
display/components/app_menu/include/: app_menu.h
display/components/app_screen/: CMakeLists.txt  app_screen.c
display/components/app_screen/include/: app_screen.h
display/components/app_setup/: CMakeLists.txt  app_setup.c
display/components/app_setup/include/: app_setup.h
display/components/app_timeout/: CMakeLists.txt  app_timeout.c
display/components/app_timeout/include/: app_timeout.h
display/components/cjson_psram_hooks/: CMakeLists.txt  cjson_psram_hooks.c
display/components/cjson_psram_hooks/include/: cjson_psram_hooks.h
display/components/clock/: CMakeLists.txt  clock.c
display/components/clock/include/: clock.h
display/components/file_transfer/: CMakeLists.txt  file_transfer.c  util_cmd.txt
display/components/file_transfer/include/: file_transfer.h
display/components/lcd_touch/src/: tt21100.c
display/components/lvgl__lvgl/: idf_component.yml
display/components/lvgl_gui/: CMakeLists.txt
display/components/lvgl_gui/lv_port/: lv_port.c  lv_port.h  lv_port_fs.c  lv_port_under_test.txt
display/components/manual_ota/: CMakeLists.txt  manual_ota.c
display/components/manual_ota/include/: manual_ota.h
display/components/power_management/: CMakeLists.txt  power_management.c  ulp_adc.c
display/components/power_management/include/: power_management.h  ulp_adc.h
display/components/power_management/ulp/: adc.S  example_config.h
display/components/s3_bluetooth/: CMakeLists.txt  s3_ble_manager.c  s3_bluetooth.c  s3_bt_classic.c  s3_bt_manager.c
display/components/s3_bluetooth/include/: s3_bluetooth.h
display/components/s3_cloud/: CMakeLists.txt  account.json  s3_https_cloud.c  s3_sync_account_contents.c  s3_tracking.c
display/components/s3_cloud/include/: s3_https_cloud.h  (+2 more)
display/components/storage/: CMakeLists.txt  storage.c
display/components/xor_decrypt_filter/: CMakeLists.txt  Kconfig  xor_decrypt_filter.c
display/main/: CMakeLists.txt  Kconfig.projbuild  app_state_machine.c  audio_player.c  decode_image.c  decode_image.h  fac_bt.c  fac_wifi.c  idf_component.yml  lv_decoders.c  lv_screen_mgr.c  main.c  s3_album_mgr.c  s3_definitions.c  s3_logger.c  s3_nfc_handler.c  voltage_kalman.c
display/main/fonts/: cherry_bomb_16.c  cherry_bomb_24.c  cherry_bomb_48.c  cherry_bomb_72.c  cherry_bomb_90.c  cherry_bomb_fonts.h
display/main/include/: app_state_machine.h  audio_player.h  fac_bt.h  fac_wifi.h  lv_conf.h  lv_decoders.h  lv_screen_mgr.h  s3_alarm_mgr.h  s3_album_mgr.h  s3_definitions.h  s3_logger.h  s3_nfc_handler.h  voltage_kalman.h
display/overrides/: idf_component.yml
testeW/: CMakeLists.txt
testeW/components/wifi_manager/: CMakeLists.txt  wifi_manager.c
testeW/main/: main.c
(+6 files in other folders)
